--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.0.17",
