--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "cookie": "^0.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-error-boundary": "^5.0.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
