--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-error-boundary": "^5.0.0",
+    "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
