--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-error-boundary": "^5.0.0",
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.4.3",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
